--- a/index.html
+++ b/index.html
@@ -1,13 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New-year-new-me</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
+    <header class="header">
+        <div class="banner">
+        <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form, by injected humour, or randomised words</p>
+        <button class="btn-primary">Contact Us</button>
+    </div>
+    </header>
+    <main>
+        <section class="about">
+            <div class="about-image">
+                <img class="profile-pic" src="images/hardy.png" alt="">
+            </div>
+            <div class="about-info">
+                <h1 class="section-title">My failures of previous year</h1>
+                <p class="section-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+        <section class="my-plans">
+            <h1 class="section-title">My Plans</h1>
+            <div class="plan-items-container">
+                <div class="plan-items">
+                    <img src="images/icons/web.png" alt="">
+                    <h3 class="plan-item-title">Web Development</h3>
+                    <p class="plan-item-description">I want to start</p>
+                </div>
+                <div class="plan-items">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="plan-item-title">Javascript</h3>
+                    <p class="plan-item-description">I want to learn</p>
+                </div>
+                <div class="plan-items">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3 class="plan-item-title">Smoking Habit</h3>
+                    <p class="plan-item-description">I want to end</p>
+                </div>
+                <div class="plan-items">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3 class="plan-item-title">ecommerce</h3>
+                    <p class="plan-item-description">I want to develop</p>
+                </div>
+            </div>
+        </section>
+         
+    </main>
     <footer></footer>
 </body>
+
 </html>
