--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <img class="profile-pic" src="images/hardy.png" alt="">
             </div>
             <div class="about-info">
-                <h1 class="section-title">My failures of previous year</h1>
-                <p class="section-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <h1 class="about-info-title">My failures of previous year</h1>
+                <p class="about-info-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
                 <ul>
                     <li>Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular belief.</li>
