finished call-section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
                 </div>
             </div>
         </section>
-         
+         <section class="call-section">
+            <h1 class="call-section-title">Awlays keep a positive mindset</h1>
+            <button class="btn-secondary">Call Now</button>
+         </section>
     </main>
     <footer></footer>
 </body>
